2003-01-05  Dani Carbonell  <bocata@panete.net>

	* TODO: updated.

	* src/dialogs.c (connectingdialog_new): fixed behaviour when opening
	more than one window, now it presents the existing one.
	(teamdialog_new):likewise.
	(prefdialog_new):likewise.

	* src/tetrinet.c (tetrinet_key): we were giving focus to the gmsginput
	even if there was no such input visible, now we only give focus if
	gmsgstate == 1 (while writing message).

	* src/gtetrinet.c (main): gtk_window_set_policy is deprecated,
	changed to gtk_window_set_resizable.

2003-01-05  Jordi Mallach  <jordi@sindominio.net>

	* Adapt patch from Jan Bretschneider with some UI improvements that
	mimic windows tetrinet's behaviour.
	* src/gtetrinet.c (show_fields_page): new function, switches to fields
	notebook tab.
	(show_partyline_page): new funtion, switches to partyline notebook
	tab.
	* src/tetrinet.c (tetrinet_inmessage): switch to partyline on
	successful connect and on game end, and to fields on game start.

2003-01-05  Jordi Mallach  <jordi@sindominio.net>

	* src/commands.c (about_command): fix segfault when calling two about
	dialogs. Patch from James Antill.

	* src/gtetrinet.c (main): autofocus the text box when switching from
	some notetab to partyline. Patch from James Antill.

2003-01-05  Dani Carbonell  <bocata@panete.net>

	* TODO: updated.

	* src/tetrinet.c (tetrinet_inmessage): converted reason to disconnect
	to UTF-8 so it can be displayed properly.

	* src/winlist.c (winlist_additem): fixed memory leak.

	* src/misc.c (nocolor): it wasn't doing anything, reverted to its
	previous behaviour, but now it doesn't cut accented characters ( < 0 ).

	* src/fields.c (fields_setlabel): now displays correctly all the UTF-8
	characters, applying the nocolor () function to the ASCII strings
	before recoding them to UTF-8.

	* src/partyline.c (partyline_namelabel): likewise.
	(partyline_page_new): added a horizontal scrollbar to the playerlist.
