@@ -1,3 +1,8 @@
+2003-01-05  Jordi Mallach  <jordi@sindominio.net>
+
+	* src/commands.c (toolbar): assign an icon to the detach button,
+	and add useful tooltips to each button.
+
 2003-01-05  Dani Carbonell  <bocata@panete.net>
 
 	* TODO: updated.
